# libturglem

./: CMakeLists.txt  ChangeLog  README  turglem.spec
include/: config.h.in
include/turglem/: lemmatizer.h  lemmatizer.hpp  lemmatizer.tcc  morph_compiler.hpp  morph_compiler.tcc  paradigms.h  prediction.h  string.hpp
include/turglem/default/: adapter.h  adapter.hpp
include/turglem/english/: adapter.h  adapter.hpp  gramtab.h
include/turglem/russian/: adapter.h  adapter.hpp  gramtab.h
include/txml/: txml.hpp
share/turglem/english/: gramtab.xml  lemmas.xml  paradigms.xml
share/turglem/russian/: gramtab.xml
src/turglem/: lemmatizer.c  paradigms.c  prediction.c
src/turglem/default/: adapter.c
src/turglem/english/: adapter.c
src/turglem/russian/: adapter.c
src/txml/: txml.cpp
src/utils/: auto.c
src/utils/english/: lemc.cpp  lemq.c
src/utils/russian/: lemc.cpp  lemq.c
